--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,6 +70,12 @@
         "set": "cpp",
         "unordered_set": "cpp",
         "filesystem": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "forward_list": "cpp",
+        "list": "cpp",
+        "ranges": "cpp",
+        "span": "cpp",
+        "regex": "cpp",
+        "valarray": "cpp"
     }
 }
