--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -84,6 +84,21 @@
         "shared_mutex": "cpp",
         "stop_token": "cpp",
         "thread": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "cfenv": "cpp",
+        "charconv": "cpp",
+        "cinttypes": "cpp",
+        "clocale": "cpp",
+        "codecvt": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "condition_variable": "cpp",
+        "csetjmp": "cpp",
+        "csignal": "cpp",
+        "cuchar": "cpp",
+        "memory_resource": "cpp",
+        "numbers": "cpp",
+        "scoped_allocator": "cpp",
+        "typeindex": "cpp"
     }
 }
