--- a/input.in
+++ b/input.in
@@ -1,5 +1,5 @@
 4
-3 3 1 1
-1 1 3 1
-3 3 1 1
-1 1 3 3
+Mildred born in previous Dragon year from Bessie
+Gretta born in previous Monkey year from Mildred
+Elsie born in next Ox year from Gretta
+Paulina born in next Dog year from Bessie
